[package]
name = "token-handler"
version = "0.1.1"
edition = "2024"
exclude = [
    "test.rs",
]

description = "A library for handling tokens"
categories = ["encoding", "security"]
keywords = ["token", "jwt", "jsonwebtoken"]
authors = ["skim@bongkow.com"]
license = "MIT"
repository = "https://github.com/bongkow/token-handler"


[dependencies]
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "9.3.1"


